--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "4.18.1",
     "cors": "2.8.5",
-    "web-push": "3.5.0"
+    "web-push": "3.5.0",
+    "request": "2.88.2"
   }
 }
